<?xml version="1.0" encoding="UTF-8"?>
<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.rave</groupId>
        <artifactId>rave-project</artifactId>
        <version>0.23-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>org.apache.rave.integration-tests</groupId>
    <artifactId>rave-integration-tests</artifactId>

    <packaging>pom</packaging>
    <name>Apache Rave :: rave-integration-tests</name>
    <description>Test stories verifying functionality of Apache Rave using Java and Spring</description>

    <properties>
        <jbehave.core.version>3.8</jbehave.core.version>
        <jbehave.web.version>3.5.5</jbehave.web.version>
        <jbehave.site.version>3.1.1</jbehave.site.version>
        <org.hamcrest.version>1.3</org.hamcrest.version>
        <commons-logging.version>1.1.3</commons-logging.version>
        <!-- New Selenium versions are often needed after an upgrade of Mozilla Firefox -->
        <selenium.version>2.33.0</selenium.version>
        <meta.filter />

        <!-- Cargo configuration properties -->
        <!-- if you want a remote debugging on a different a address
  override on command line with -Dcargo.debug.addres=xxxx -->
        <cargo.debug.address>8000</cargo.debug.address>
        <!-- if you want to start remote debugging session suspended
  override on command line with -Dcargo.debug.suspend=y -->
        <cargo.debug.suspend>n</cargo.debug.suspend>
        <cargo.args />
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${org.hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${org.hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-integration</artifactId>
                <version>${org.hamcrest.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${commons-logging.version}</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>${javax.mail.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>${javax.activation.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.wookie</groupId>
            <artifactId>wookie</artifactId>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.rave</groupId>
            <artifactId>rave-shindig</artifactId>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.rave</groupId>
            <artifactId>rave-portal</artifactId>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.rave</groupId>
            <artifactId>rave-demo-gadgets</artifactId>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-core</artifactId>
            <version>${jbehave.core.version}</version>
            <classifier>resources</classifier>
            <type>zip</type>
        </dependency>
        <dependency>
            <groupId>org.jbehave.site</groupId>
            <artifactId>jbehave-site-resources</artifactId>
            <version>${jbehave.site.version}</version>
            <type>zip</type>
        </dependency>
        <dependency>
            <groupId>org.jbehave.web</groupId>
            <artifactId>jbehave-web-selenium</artifactId>
            <version>${jbehave.web.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium.fluent</groupId>
            <artifactId>fluent-selenium</artifactId>
            <version>1.0</version>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>org.seleniumhq.selenium</groupId>
                    <artifactId>selenium-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jbehave</groupId>
            <artifactId>jbehave-spring</artifactId>
            <version>${jbehave.core.version}</version>
        </dependency>
        <!--  logging -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <scope>compile</scope>
        </dependency>
        <!-- Default database -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.0</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jbehave</groupId>
                    <artifactId>jbehave-maven-plugin</artifactId>
                    <version>${jbehave.core.version}</version>
                    <executions>
                        <execution>
                            <id>unpack-view-resources</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>unpack-view-resources</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>embeddable-stories</id>
                            <phase>integration-test</phase>
                            <configuration>
                                <includes>
                                    <include>**/*Stories.java</include>
                                </includes>
                                <excludes />
                                <generateViewAfterStories>true</generateViewAfterStories>
                                <ignoreFailureInStories>true</ignoreFailureInStories>
                                <ignoreFailureInView>true</ignoreFailureInView>
                                <metaFilters>
                                    <metaFilter>${meta.filter}</metaFilter>
                                </metaFilters>
                            </configuration>
                            <goals>
                                <goal>run-stories-as-embeddables</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <profiles>
        <profile>
            <id>integration-tests</id>
            <build>
                <defaultGoal>integration-test</defaultGoal>
                <plugins>
                    <plugin>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.7</version>
                        <executions>
                            <execution>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <delete>
                                            <fileset dir="/tmp" includes="rave_db*" />
                                        </delete>
                                    </target>
                                </configuration>
                                <inherited>false</inherited>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.cargo</groupId>
                        <artifactId>cargo-maven2-plugin</artifactId>
                        <version>${cargo.version}</version>
                        <executions>
                            <execution>
                                <id>start-container</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>start</goal>
                                </goals>
                                <inherited>false</inherited>
                            </execution>
                        </executions>
                        <configuration>
                            <deployables>
                                <deployable>
                                    <groupId>org.apache.wookie</groupId>
                                    <artifactId>wookie</artifactId>
                                    <type>war</type>
                                    <properties>
                                        <context>/wookie</context>
                                    </properties>
                                </deployable>
                                <deployable>
                                    <groupId>org.apache.rave</groupId>
                                    <artifactId>rave-shindig</artifactId>
                                    <type>war</type>
                                    <properties>
                                        <context>/ROOT</context>
                                    </properties>
                                </deployable>
                                <deployable>
                                    <groupId>org.apache.rave</groupId>
                                    <artifactId>rave-demo-gadgets</artifactId>
                                    <type>war</type>
                                    <properties>
                                        <context>/demogadgets</context>
                                    </properties>
                                </deployable>
                                <deployable>
                                    <groupId>org.apache.rave</groupId>
                                    <artifactId>rave-portal</artifactId>
                                    <type>war</type>
                                    <properties>
                                        <context>/portal</context>
                                    </properties>
                                </deployable>
                            </deployables>
                            <configuration>
                                <properties>
                                    <cargo.datasource.datasource.portalDB>
                                        cargo.datasource.jndi=jdbc/ravePortalDB|
                                        cargo.datasource.driver=${portal.dataSource.driver}|
                                        cargo.datasource.url=${portal.dataSource.url}|
                                        cargo.datasource.username=${portal.dataSource.username}|
                                        cargo.datasource.password=${portal.dataSource.password}
                                    </cargo.datasource.datasource.portalDB>
                                    <cargo.datasource.datasource.shindigDB>
                                        cargo.datasource.jndi=jdbc/raveShindigDB|
                                        cargo.datasource.driver=${shindig.dataSource.driver}|
                                        cargo.datasource.url=${shindig.dataSource.url}|
                                        cargo.datasource.username=${shindig.dataSource.username}|
                                        cargo.datasource.password=${shindig.dataSource.password}
                                    </cargo.datasource.datasource.shindigDB>
                                    <cargo.jvmargs>
                                        <![CDATA[-Dh2.bindAddress="localhost" -Xdebug -XX:MaxPermSize=256m -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
                                    </cargo.jvmargs>
                                    <cargo.tomcat.context.reloadable>true</cargo.tomcat.context.reloadable>
                                </properties>
                                <home>${project.build.directory}/tomcat6x</home>
                                <configfiles>
                                    <configfile>
                                        <file>
                                            ${project.basedir}/../rave-portal-resources/src/main/dist/conf/tomcat-users.xml
                                        </file>
                                        <todir>conf/</todir>
                                        <tofile>tomcat-users.xml</tofile>
                                    </configfile>
                                </configfiles>
                            </configuration>
                            <container>
                                <containerId>tomcat6x</containerId>
                                <timeout>180000</timeout>
                                <zipUrlInstaller>
                                    <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives
                                    </downloadDir>
                                    <url>
                                        http://archive.apache.org/dist/tomcat/tomcat-6/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.tar.gz
                                    </url>
                                </zipUrlInstaller>
                                <systemProperties>
                                    <net.sf.ehcache.skipUpdateCheck>true</net.sf.ehcache.skipUpdateCheck>
                                </systemProperties>
                                <dependencies>
                                    <dependency>
                                        <groupId>javax.mail</groupId>
                                        <artifactId>mail</artifactId>
                                        <classpath>shared</classpath>
                                    </dependency>
                                    <dependency>
                                        <groupId>javax.activation</groupId>
                                        <artifactId>activation</artifactId>
                                        <classpath>shared</classpath>
                                    </dependency>
                                    <dependency>
                                        <groupId>com.h2database</groupId>
                                        <artifactId>h2</artifactId>
                                        <classpath>extra</classpath>
                                    </dependency>
                                </dependencies>
                            </container>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <modules>
        <module>rave-core-tests</module>
        <module>rave-newuser-tests</module>
        <module>rave-admin-tests</module>
        <module>rave-default-account-tests</module>
    </modules>
</project>
